--- a/pirated_shows/Invincible/Invincible_Season2/index.html
+++ b/pirated_shows/Invincible/Invincible_Season2/index.html
@@ -4,7 +4,7 @@
         <title>Season 2</title>
     </head>
     <body>
-        <h3><a href="../index.html">BACK</a></h3>
+        <h3><a href="/index.html">BACK</a></h3>
         <img src="/assets/S2_title_image.png" alt="Title page" width="30%">
 
         <h1>Season 2 Streaming</h1>
