--- a/pirated_shows/Invincible/Invincible_Season3/index.html
+++ b/pirated_shows/Invincible/Invincible_Season3/index.html
@@ -4,7 +4,7 @@
         <title>Season 3</title>
     </head>
     <body>
-        <h3><a href="../index.html">BACK</a></h3>
+        <h3><a href="/index.html">BACK</a></h3>
         <img src="../assets/S3_title_image.png" alt="Title page" width="30%">
 
         <h1>Season 3 Streaming</h1>
