--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         <h1>Pizza2d1's Streaming Archive</h1>
         <h2>Invincible</h2>
         <img src="assets/invincible_image.png" width="50%" alt="are you sure?">
-        <h2><a href="pirated_shows/Invincible_Season1/" class="btn btn-green white">Season 1</a></h2>
-        <h2><a href="Invincible_Season2/" class="btn btn-blue white">Season 2</a></h2>
-        <h2><a href="Invincible_Season3/" class="btn btn-red white">Season 3 (not complete)</a></h2>
+        <h2><a href="pirated_shows/Invincible/Invincible_Season1/" class="btn btn-green white">Season 1</a></h2>
+        <h2><a href="pirated_shows/Invincible/Invincible_Season2/" class="btn btn-blue white">Season 2</a></h2>
+        <h2><a href="pirated_shows/Invincible/Invincible_Season3/" class="btn btn-red white">Season 3 (not complete)</a></h2>
         <ul>
-            <li><a href="Invicible_Season1/Invincible-Season-1_MP4.zip" download>Full Season 1 Download</a></li>
-            <li><a href="Invicible_Season2/Invincible-Season-2_MP4.zip" download>Full Season 2 Download</a></li>
-            <li><a href="Invicible_Season3/Invincible-Season-3_MP4(INCOMPLETE).zip" download>Full Season 3 Download</a></li>
+            <li><a href="pirated_shows/Invincible/Invicible_Season1/Invincible-Season-1_MP4.zip" download>Full Season 1 Download</a></li>
+            <li><a href="pirated_shows/Invincible/Invicible_Season2/Invincible-Season-2_MP4.zip" download>Full Season 2 Download</a></li>
+            <li><a href="pirated_shows/Invincible/Invicible_Season3/Invincible-Season-3_MP4(INCOMPLETE).zip" download>Full Season 3 Download</a></li>
         </ul>
 
         <!-- <br><br><hr>
