--- a/pirated_shows/Invincible/Invincible_Season1/index.html
+++ b/pirated_shows/Invincible/Invincible_Season1/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="/CSS/image_fade.css">
     </head>
     <body>
-        <h3><a href="../index.html">BACK</a></h3>
+        <h3><a href="/index.html">BACK</a></h3>
         <img src="../assets/S1_title_image.png" alt="Title page" width="30%">
 
         <h1>Season 1 Streaming</h1>
