--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="/CSS/buttons.css">
         <link rel="stylesheet" href="/CSS/dark_body.css">
     </head>
-    <body>Invincible/nnvvaavviinncciicciibbllee//
+    <body>
         Hello theres
         <div>
         <h1>Pizza2d1's Streaming Archive</h1>
