--- a/pirated_shows/Invincible/Invincible_Season2/Invincible-Season-2_MP4-1/test_stream.html
+++ b/pirated_shows/Invincible/Invincible_Season2/Invincible-Season-2_MP4-1/test_stream.html
@@ -149,13 +149,13 @@
             const contents = document.querySelectorAll('.content');
             contents.forEach(content => {
                 content.classList.remove('active');
-                content.classList.unload('active')
+                // content.classList.unload('active')
             });
 
             const activeContent = document.getElementById(contentId);
             if (activeContent) {
                 activeContent.classList.add('active');
-                activeContent.classList.load('active')
+                // activeContent.classList.load('active')
             }
         }
     </script>
