Updated navigation so that you can actually access the movies

--- a/movies/index.html
+++ b/movies/index.html
@@ -6,6 +6,24 @@
     <body>
         <h3><a href="../index.html">BACK</a></h3>
 
-        <h1><a href="Shrek1/">Shrek 1</a></h1>
+        <h2><a href="CatchMeIfYouCan/">Catch Me If You Can</a></h2>
+        <h2><a href="Interstellar/">Interstellar</a></h2>
+
+        <h2>Shrek:</h2>
+        <h3><a href="Shrek1/">Shrek 1</a></h3>
+        <h3><a href="Shrek2/">Shrek 2</a></h3>
+        <h3><a href="Shrek3/">Shrek 3</a></h3>
+        <h3><a href="Shrek4/">Shrek 4</a></h3>
+        <h2>Sonic:</h2>
+        <h3><a href="Sonic1/">Sonic 1</a></h3>
+        <h3><a href="Sonic2/">Sonic 2</a></h3>
+        <h3><a href="Sonic3/">Sonic 3</a></h3>
+
+        <h2><a href="SpidermanFarFromHome/">Spiderman Far From Home</a></h2>
+        <h2><a href="SpidermanIntoTheSpiderverse2/">Spiderman Into the Spiderverse 2</a></h2>
+        <h2><a href="SpidermanNoWayHome/">Spiderman No Way Home</a></h2>
+        <h2><a href="TheAmazingSpiderman/">The Amazng Spiderman</a></h2>
+        <h2><a href="TheIronGiant/">The Iron Giant</a></h2>
+        <h2><a href="ThePerksOfBeingAWallflower/">The Perks Of Being A Wallflower</a></h2>
     </body>
 </html>
